# dekl

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Justfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
dekl/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  constants.py  dotfiles.py  hooks.py  output.py  packages.py  plan.py  services.py  state.py
